--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
     <title>Meal Search App</title>
 </head>
 <body>
@@ -19,8 +20,8 @@
     <div id="meals-container"></div>
 
     <footer>
-        <p>MIS455 Section-1 Spring 2024 Final © 2024</p>
-        <p>Powered By S.M. Arif Mahmud, ID-1830398 </p>
+        <label>MIS455 Section-1 Spring 2024 Final © 2024</lebel> <br>
+        <label>Powered By <b><a href="https://github.com/Arif9911/mis455-final-spring24-sec-1-1830398">S.M. Arif Mahmud, ID-1830398</a></b></label>
     </footer>
 
     <script src="script.js"></script>
